Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-18500

QTextBlock crash

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 4.7.4
    • 4.6.2, 4.7.1
    • GUI: Text handling
    • None
    • MacOS X, Linux
    • b033bb91ea6fd32989cc59904aa79db9a188bf5b

      The attached program crashes on various operating systems with Qt 4.6 and 4.7. On MacOSX setting MallocScribble=1 and MallocPreScribble=1 in the environment consistently crashes the program. The problem is that, the isValid() method of the QTextBlock stored in the "block" variable returns true, even though the block appears to be invalid.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            jiang Jiang Jiang
            mrcrick Marco Biasini
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes